@@ -1,3 +1,11 @@
+2009-04-08  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-session/gsm-xsmp-client.c: (save_yourself_done_callback): only
+	call SmsSaveComplete() if we are still in a SaveYourself state. My
+	previous change about this didn't take into account the case where the
+	logout is cancelled, in which case SmsSaveComplete() shouldn't be
+	called.
+
 2009-04-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gnome-session/gs-idle-monitor.c (handle_alarm_notify_event): Ignore
